[package]
name = "pogo-gamemaster-parser"
version = "0.1.0"
authors = ["Marco Napetti <marco.napetti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.3"
rayon = "1.3"
log = "0.4"
env_logger = "0.7"
