[package]
name = "pogo-gamemaster-parser"
version = "0.4.0"
authors = ["Marco Napetti <marco.napetti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.9"
rayon = "1.3"
once_cell = "1.3"
log = "0.4"
env_logger = "0.7"
structopt = "0.3"
pogo-gamemaster-entities = { git = "https://github.com/nappa85/pogo-gamemaster-entities.git" }

[dev-dependencies]
chrono = "0.4"
